# HK-House

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
data/processed/: district_stats.csv  hk_price_map.html  properties.parquet
data/raw/house730/: house730_20260621T032032Z.jsonl  house730_20260621T032208Z.jsonl
data/raw/midland/: midland_20260621T031840Z.jsonl  midland_20260621T032206Z.jsonl
hk_house/: __init__.py  analysis.py  cli.py  config.py  dataset.py  http_client.py  storage.py
hk_house/models/: __init__.py  base.py  centanet.py  hangseng.py  house730.py  hse28.py  midland.py
hk_house/sources/: base_pipeline.py
hk_house/sources/centanet/: __init__.py  fetcher.py  parser.py  pipeline.py
hk_house/sources/hangseng/: __init__.py  fetcher.py  parser.py  pipeline.py
hk_house/sources/house730/: __init__.py  fetcher.py  parser.py  pipeline.py
hk_house/sources/hse28/: __init__.py  fetcher.py  parser.py  pipeline.py
hk_house/sources/midland/: __init__.py  fetcher.py  parser.py  pipeline.py
tests/: test_parsers.py
