[project]
name = "hk-house"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "branca>=0.8.2",
    "brotli>=1.2.0",
    "folium>=0.20.0",
    "httpx[http2]>=0.28.1",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "tenacity>=9.1.4",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
